Bug 255635 - Start Maintenance options only appear after email selection
Summary: Start Maintenance options only appear after email selection
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-30 02:18 UTC by Sabine Faure
Modified: 2010-11-12 21:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-10-30 02:18:16 UTC
Version:           unspecified (using Devel) 
OS:                Linux

After the user clicks on Start Maintenance a new view appears but it is unclear to him what can be done from it.

It's not until he ventures to click on an email that he sees all the available options: Delete emails...

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on any folder containing at least 2 emails
- Open the 'Actions' tab
- Click on 'View'
- Click on 'Start Maintenance'
- A new view appear with the folder name on the top left hand side and its
emails on the right
- Click on one of the emails

Actual Results:  
Under the folder name a lot of functionalities appear: Delete email, Move
Item To..., Copy Item To..., Mark Mail as Read, Mark Mail as Important, Remove
Action Item Mark


Expected Results:  
Would it not be easier for the user to understand the purpose of this view if the options (Delete, copy, move...) were already displayed.

The user will do the same as now ie clickign on the email(s) to select them and then on one option to apply it.

ex:
...
- Click on 'Start Maintenance'
- A new view appear with the folder name on the top left hand side and options underneath as well as and the folder emails on the right
- Click on one or several emails (a green check icon appears next to each clicked email marking them as selected)
- Click on an option (ex: delete)
...

N900, 4:4.6~20101029.1191021-1maemo1.1190669
Comment 1 Till Adam 2010-11-08 22:33:41 UTC
SVN commit 1194381 by tilladam:

Show text telling the user what to do in bulk actions view.

When there is nothing selected, give the user some guidance, that
she needs to select something from the list view on the right.

BUG: 255635

 M  +8 -0      BulkActionList.qml  
 M  +5 -0      qmllistselectionmodel.cpp  
 M  +2 -0      qmllistselectionmodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194381
Comment 2 Ludwig Reiter 2010-11-11 13:28:44 UTC
tested with kdepim-mobile 20101111.1195418-1maemo1

I can see the description text. Okay.
I think this closes this issue.
Comment 3 Sabine Faure 2010-11-12 21:55:03 UTC
Indeed it is corrected now.

There is a 'Please select one or more tims on the right' message to inform the user on what to do.

N900, 4:4.6~20101112.1195992-1maemo1.1196001