Show text telling the user what to do in bulk actions view.

When there is nothing selected, give the user some guidance, that
she needs to select something from the list view on the right.

BUG: 255635

svn path=/trunk/KDE/kdepim/mobile/; revision=1194381